[project]
name = "ccload"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus Albuquerque",email = "mvca@cin.ufpe.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "aiohttp (>=3.11.13,<4.0.0)"
]

[tool.poetry]
packages = [{include = "ccload", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ccload = "ccload.__main__:_cli"
[tool.ruff.lint]
select = ["ALL"]
ignore = ["T201"]